--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -21,22 +21,12 @@ section {
 .section-link {
   width: fit-content;
   color: white;
-  text-decoration: none;
+  text-decoration: underline;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-style: italic;
-  text-decoration: none;
-  transition: background-color .5s;
   transition: color .5s;
-  transition: transform .5s;
-  transition: text-decoration .5s;
   &:hover {
-      transition: background-color .5s;
       transition: color .5s;
-      transition: transform .5s;
-      background: $light-blue;
-      font-style: normal;
-      transform: skew(-15deg);
-      color: $background-color;
+      color: $light-blue;
   }
 }
